--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <img src="مكتب-سياحي/مكتب-سياحي-بحريني.webp" alt="مكتب سياحي - مغادر" class="mughader_header_logo">
             <nav class="mughader_desktop_nav">
                 <ul class="mughader_nav_links">
-                    <li><a onclick="closeSidebar()">الصفحة الرئيسية</a></li>
+                    <li><a onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); closeSidebar()">الصفحة الرئيسية</a>
+                    </li>
                     <li><a onclick="scrollToWhoAreWe('about_us_section_id')">من نحن؟</a></li>
                     <li>
                         <a href="https://www.instagram.com/saham.ge?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
@@ -47,7 +48,8 @@
         <div class="mughader_mobile_sidebar" id="mughader_mobile_sidebar">
             <span class="mughader_close_icon" onclick="closeSidebar()">&times;</span>
             <ul>
-                <li><a onclick="closeSidebar()">الصفحة الرئيسية</a></li>
+                <li><a onclick="window.scrollTo({ top: 0, behavior: 'smooth' }); closeSidebar()">الصفحة الرئيسية</a>
+                </li>
                 <li><a onclick="scrollToWhoAreWe('about_us_section_id'); closeSidebar()">من
                         نحن؟</a></li>
 
@@ -81,23 +83,25 @@
 
 
 
-    <section class="wow_effect_section">
-        <div class="wow_overlay">
-            <div class="wow_text_container">
-                <div class="wow_glass_box">
-                    <h1 class="wow_title" title="مكتب سياحي - مغادر">شركة سهم للسفر والسياحة</h1>
-                    <h2 class="wow_subtitle">
-                        موقعنا: المملكة العربية السعودية
-                    </h2>
-                    <div class="wow_dynamic_text">
-                        <span id="mughader_dynamic_word_switch" class="wow_dynamic_word">رحلات سياحية</span>
-                        <div id="mughader_line_timer" class="wow_timer_line"></div>
-                    </div>
-                </div>
+
+
+
+
+    <section class="neon_section">
+        <div class="neon_overlay">
+            <div class="neon_text_container">
+
+                <h1 class="neon_title" title="شركة سياحية">شركة سهم للسفر والسياحة</h1>
+
+                <p class="neon_subtitle">موقعنا: المملكة العربية السعودية</p>
+
+                <a onclick="scrollToMiddleOfElement('scrollable_section_title')" class="neon_button">تصفح العروض
+                    السياحية</a>
+
             </div>
         </div>
+        <canvas id="neon_canvas"></canvas>
     </section>
-
 
 
 
